# rook-and-roll

./: .gitignore  Cargo.toml  README.md  attatch_to_latest.sh  callgrind.out.128602  callgrind.out.128883  callgrind.out.130870  callgrind.out.76143  callgrind.out.77205  callgrind.out.90994  callgrind.out.91834  callgrind.out.92520  callgrind.out.93045  eval.py  listen_in.py  perf.data  perf.data.old  rustinator2.ini  test.cpp  wac  wac_small
chess/: Cargo.toml
chess/src/: board.rs  board_builder.rs  eval.rs  lib.rs  move_info.rs  move_tables.rs  moves.rs  next_board_builder.rs  perft.rs  search.rs  tt.rs  tt_entry.rs  uci.rs  zorbist.rs
chess/src/board/: board.rs  board_copier.rs  fen.rs  mod.rs  zorbist.rs
chess/src/movegen/: magic.rs  mod.rs  move_info.rs  move_list.rs  move_scoring.rs  move_tables.rs  movegen.rs  moves.rs
chess/src/movegen/movegen_iters/: bishop_iter.rs  king_iter.rs  (+7 more)
chess/src/search/: eval.rs  hh.rs  lazy_smp.rs  mod.rs  old_tt.rs  search.rs  searcher.rs  searchers.rs  tt.rs  tt_entry.rs
src/: board.rs  board_builder.rs  error.rs  eval.rs  fen.rs  game_state.rs  hh.rs  http.rs  lazy_smp.rs  magic.rs  main.rs  move_info.rs  move_list.rs  move_scorer.rs  move_tables.rs  movegen.rs  moves.rs  new_movegen.rs  old_movegen.rs  opening_book.rs  perft.rs  search.rs  searcher.rs  server.rs  smp.rs  tt.rs  tt_entry.rs  uci.rs  wac_tester.rs  zorbist.rs
uci/: Cargo.toml  perf.data
uci/src/: game_state.rs  main.rs  old_game_state.rs  uci.rs  wac_tester.rs
uci/src/game_state/: game_state_mt.rs  game_state_st.rs  mod.rs
web-dummy/: Cargo.toml
(+16 files in other folders)
