[package]
name = "rookandroll"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
rand_chacha = "0.3.1"
rand_distr = "0.4.3"
threadpool = "1.8.1"
lazy_static = "1.4.0"
log = "0.4.17"
simplelog = "^0.12.0"
chrono = "0.4.22"
futures = "0.3.24"

[profile.dev]
debug = 2

[profile.release]
opt-level = 3
overflow-checks = false
lto = true