[package]
name = "rookandroll"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
rand_chacha = "0.3.1"
rayon = "1.5.3"
log = "0.4.17"
simplelog = "^0.12.0"
chrono = "0.4.22"


[profile.dev]
debug = 2
#opt-level = 1

[profile.release]
lto = true


[profile.test]
#opt-level = 3